// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HOC writchCard elevationType 0 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  box-shadow: none;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        <div>
          good
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HOC writchCard elevationType 1 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),0px 1px 1px 0px rgb(0 0 0 / 14%),0px 1px 3px 0px rgb(0 0 0 / 12%);
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        <div>
          good
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HOC writchCard elevationType 2 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%),0px 3px 4px 0px rgb(0 0 0 / 14%),0px 1px 8px 0px rgb(0 0 0 / 12%);
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        <div>
          good
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HOC writchCard empty snapshot 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  box-shadow: none;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`HOC writchCard radius 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: white;
  box-shadow: none;
  border-radius: 20px;
}

.emotion-1 {
  height: 100%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        <div>
          good
        </div>
      </div>
    </div>
  </div>
</div>
`;
